openwebrx (1.2.20) bullseye jammy; urgency=low

  * Added admin-defined receiver name (if any) to the window title.
  * Made scanner continue scan from the last active bookmark.
  * Fixed Soapy extra settings being sent as individual values.
  * Fixed Settings icon getting cut off in Chrome on Android.
  * Fixed number input dialog shifting the UI on mobile devices.
  * Fixed accidetal resize on mobile devices.
  * Added 8m amateur band.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 17 Jun 2023 16:12:00 +0000

openwebrx (1.2.19) bullseye jammy; urgency=low

  * Added separate ZVEI decoder for German SELCALL modes.
  * Added device option to require magic key for profile changes.
  * Added option to swap mouse wheel between tuning and zooming.
  * Added optional frame to bookmark dialogs.
  * Updated column names and formatting for PAGE, HFDL, ISM panels.
  * Updated rtl-433 invocation to be compatible with older versions.
  * Renamed HFDL background service output to "HFDL-*".
  * Changed "pocsag" mode to "page" in bands.json.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 10 Jun 2023 16:12:00 +0000

openwebrx (1.2.18) bullseye jammy; urgency=low

  * Integrated rtl-433 and dumphfdl decoder tools.
  * Added universal PAGE decoder (POCSAG + FLEX) via multimon-ng.
  * Added ISM decoder via rtl-433.
  * Added HFDL decoder via dumphfdl.
  * Added color identification for pager addresses.
  * Added optional filter to only show readable pager messages.
  * Added file browser support for text logs (such as ISM or HFDL).
  * Added HFDL-based aircraft display to the map.
  * Enabled background service functionality for HFDL, ISM, and PAGE.
  * Enabled squelch support for SELCALL, SSTV, and FAX decoders.
  * Changed read() to read1() in PopenModule to get immediate input.
  * Made PopenModule kill process that refuses to terminate on its own.
  * Disabled the original POCSAG decoder, superseded by the new one.
  * Added 433.92MHz ISM frequency to the bandplan.